--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- Favicon-->
-<link rel="shortcut icon" href="favicon.webp">
+<link rel="shortcut icon" href="favicon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
