--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
   <button id="myBtn" onclick="myFunction()">Pause</button>
 </div>
 
-<video autoplay loop controls id="myVideo">
+<video controls autoplay id="myVideo">
   <source src="ratabailando.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
